@@ -1,11 +1,11 @@
 [BEGIN_RUN_INFO]
-    	#Config Files
+    #Config Files
 	####################################
 	Config_Analysis = 'CONFIGFILE_ANALYSIS';
 	Config_Mapping = 'CONFIGFILE_MAPPING';
-    	#Detector
-    	####################################
-    	Detector_Name = 'DETECTORNAME';
+    #Detector
+    ####################################
+    Detector_Name = 'DETECTORNAME';
 	#Input Config
 	####################################
 	Input_Is_Frmwrk_Output = 'true';     #indicates we are running on input created by the framework
@@ -16,7 +16,7 @@
 	#Analysis Steps
 	####################################
 	Ana_Reco_Clusters = 'false';
-	Ana_Hits = 'false';
+	Ana_Hits = 'true';
 	Ana_Clusters = 'true';
 	Ana_Fitting = 'true';
 	#Visualizer Config
