@@ -8,15 +8,16 @@
     Detector_Name = 'DETECTORNAME';
 	#Input Config
 	####################################
-	Input_Is_Frmwrk_Output = 'true';   #indicates we are running on input created by frameowrk
+	Input_Is_Frmwrk_Output = 'false';   #indicates we are running on input created by frameowrk
 	#Output Config
 	####################################
+    Output_File_Name = 'OUTPUTFILE';
 	Output_File_Option = 'RECREATE';
-	Output_Individual = 'true';        #must be set to true in re-run mode
+	Output_Individual = 'false';        #must be set to true in re-run mode
 	#Analysis Steps
 	####################################
 	Ana_Reco_Clusters = 'false';
-	Ana_Hits = 'false';
+	Ana_Hits = 'true';
 	Ana_Clusters = 'true';
 	Ana_Fitting = 'true';
 	#Visualizer Config
